// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transaction route > getAll > should get all 1`] = `
[
  {
    "blobAsCalldataGasUsed": 1000,
    "blobs": [
      {
        "blob": {
          "commitment": "0xb4f67eb0771fbbf1b06b88ce0e23383daf994320508d44dd30dbd507f598c0d9b3da5a152e41a0428375060c3803b983",
          "size": 1500,
        },
        "blobHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 22n,
      "excessBlobGas": 15000,
      "timestamp": 2023-08-26T12:00:00.000Z,
    },
    "blockNumber": 1002,
    "fromId": "address5",
    "gasPrice": 10n,
    "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
    "maxFeePerBlobGas": 100n,
    "toId": "address6",
  },
  {
    "blobAsCalldataGasUsed": 1000,
    "blobs": [
      {
        "blob": {
          "commitment": "commitment001",
          "size": 1000,
        },
        "blobHash": "blobHash001",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 20n,
      "excessBlobGas": 10000,
      "timestamp": 2023-08-24T10:00:00.000Z,
    },
    "blockNumber": 1001,
    "fromId": "address1",
    "gasPrice": 10n,
    "hash": "txHash001",
    "maxFeePerBlobGas": 100n,
    "toId": "address2",
  },
  {
    "blobAsCalldataGasUsed": 1100,
    "blobs": [
      {
        "blob": {
          "commitment": "commitment002",
          "size": 1100,
        },
        "blobHash": "blobHash002",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 20n,
      "excessBlobGas": 10000,
      "timestamp": 2023-08-24T10:00:00.000Z,
    },
    "blockNumber": 1001,
    "fromId": "address3",
    "gasPrice": 11n,
    "hash": "txHash002",
    "maxFeePerBlobGas": 110n,
    "toId": "address4",
  },
  {
    "blobAsCalldataGasUsed": 1200,
    "blobs": [
      {
        "blob": {
          "commitment": "commitment003",
          "size": 1200,
        },
        "blobHash": "blobHash003",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 20n,
      "excessBlobGas": 10000,
      "timestamp": 2023-08-24T10:00:00.000Z,
    },
    "blockNumber": 1001,
    "fromId": "address5",
    "gasPrice": 12n,
    "hash": "txHash003",
    "maxFeePerBlobGas": 120n,
    "toId": "address6",
  },
  {
    "blobAsCalldataGasUsed": 1000,
    "blobs": [
      {
        "blob": {
          "commitment": "commitment004",
          "size": 1300,
        },
        "blobHash": "blobHash004",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 22n,
      "excessBlobGas": 15000,
      "timestamp": 2023-08-26T12:00:00.000Z,
    },
    "blockNumber": 1002,
    "fromId": "address1",
    "gasPrice": 10n,
    "hash": "txHash004",
    "maxFeePerBlobGas": 100n,
    "toId": "address3",
  },
  {
    "blobAsCalldataGasUsed": 1000,
    "blobs": [
      {
        "blob": {
          "commitment": "commitment005",
          "size": 1400,
        },
        "blobHash": "blobHash005",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 22n,
      "excessBlobGas": 15000,
      "timestamp": 2023-08-26T12:00:00.000Z,
    },
    "blockNumber": 1002,
    "fromId": "address2",
    "gasPrice": 10n,
    "hash": "txHash005",
    "maxFeePerBlobGas": 100n,
    "toId": "address4",
  },
]
`;

exports[`Transaction route > getAll > should get all with pagination 1`] = `
[
  {
    "blobAsCalldataGasUsed": 1000,
    "blobs": [
      {
        "blob": {
          "commitment": "0xb4f67eb0771fbbf1b06b88ce0e23383daf994320508d44dd30dbd507f598c0d9b3da5a152e41a0428375060c3803b983",
          "size": 1500,
        },
        "blobHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
        "index": 0,
      },
    ],
    "block": {
      "blobGasPrice": 22n,
      "excessBlobGas": 15000,
      "timestamp": 2023-08-26T12:00:00.000Z,
    },
    "blockNumber": 1002,
    "fromId": "address5",
    "gasPrice": 10n,
    "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
    "maxFeePerBlobGas": 100n,
    "toId": "address6",
  },
]
`;

exports[`Transaction route > getByAddress > should get by address 1`] = `
{
  "totalTransactions": 2,
  "transactions": [
    {
      "blobAsCalldataGasUsed": 1000,
      "blobs": [
        {
          "blob": {
            "commitment": "commitment005",
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 0,
        },
      ],
      "block": {
        "blobGasPrice": 22n,
        "excessBlobGas": 15000,
        "timestamp": 2023-08-26T12:00:00.000Z,
      },
      "blockNumber": 1002,
      "fromId": "address2",
      "gasPrice": 10n,
      "hash": "txHash005",
      "maxFeePerBlobGas": 100n,
      "toId": "address4",
    },
    {
      "blobAsCalldataGasUsed": 1000,
      "blobs": [
        {
          "blob": {
            "commitment": "commitment001",
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
      ],
      "block": {
        "blobGasPrice": 20n,
        "excessBlobGas": 10000,
        "timestamp": 2023-08-24T10:00:00.000Z,
      },
      "blockNumber": 1001,
      "fromId": "address1",
      "gasPrice": 10n,
      "hash": "txHash001",
      "maxFeePerBlobGas": 100n,
      "toId": "address2",
    },
  ],
}
`;

exports[`Transaction route > getByAddress > should get by address with pagination 1`] = `
{
  "totalTransactions": 2,
  "transactions": [
    {
      "blobAsCalldataGasUsed": 1000,
      "blobs": [
        {
          "blob": {
            "commitment": "commitment005",
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 0,
        },
      ],
      "block": {
        "blobGasPrice": 22n,
        "excessBlobGas": 15000,
        "timestamp": 2023-08-26T12:00:00.000Z,
      },
      "blockNumber": 1002,
      "fromId": "address2",
      "gasPrice": 10n,
      "hash": "txHash005",
      "maxFeePerBlobGas": 100n,
      "toId": "address4",
    },
  ],
}
`;

exports[`Transaction route > getByHash > should get by hash 1`] = `
{
  "blobAsCalldataGasUsed": 1000,
  "blobs": [
    {
      "blob": {
        "commitment": "commitment001",
        "size": 1000,
      },
      "blobHash": "blobHash001",
      "index": 0,
    },
  ],
  "block": {
    "blobGasPrice": 20n,
    "excessBlobGas": 10000,
    "timestamp": 2023-08-24T10:00:00.000Z,
  },
  "blockNumber": 1001,
  "fromId": "address1",
  "gasPrice": 10n,
  "hash": "txHash001",
  "maxFeePerBlobGas": 100n,
  "toId": "address2",
}
`;
